--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -44,7 +44,7 @@
         }
 
         .card-text{
-            text-align: justify;
+            text-align: left;
         }
 
         .flex-container {
@@ -69,7 +69,7 @@
                 <div class="card-body">
                     <h5 class="card-subtitle mb-2 text-muted">{{ challenge.created.strftime("%d %B, %Y") }}</h5>
                     <h2 class="card-title">{{ challenge.title }}</h2>
-                    <p class="card-text">{{ challenge.body }}</p>
+                    <p class="card-text">{{ challenge.body | safe }}</p>
                     <br>
                     {% if challenge.username == current_user.username %}
                         <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic outlined example">
