--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -25,8 +25,8 @@
 
         .form-control {
             font-family: Arial, serif;
-            border-radius: 15px;
-            border: 2px solid #59886f;
+            border-radius: 10px;
+            border: 1px solid darkgrey;
             padding: 15px;
 
         }
