--- a/templates/posts.html
+++ b/templates/posts.html
@@ -29,7 +29,6 @@
             padding: 20px;
             margin-top: 20px;
             background-color: white;
-            border: 1px solid grey;
             border-radius: 15px;
         }
 
@@ -40,10 +39,6 @@
 
         .card-subtitle {
             color: #727272;
-            text-align: left;
-        }
-
-        .card-text{
             text-align: left;
         }
 
@@ -63,13 +58,16 @@
             </div>
         </div>
         {% for post in posts %}
-            <div class="card">
+            <div class="card shadow mb-5">
                 <div class="card-body">
                     <h5 class="card-subtitle mb-2 text-muted">{{ post.created.strftime("%d %B, %Y") }}</h5>
                     <h2 class="card-title">{{ post.title }}</h2>
-                    <p class="card-text">{{ post.body | safe }}</p>
+                    <p class="text-start">{{ post.body | safe }}</p>
                     {% if post.username == current_user.username %}
                         <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic outlined example">
+                            {% if current_user.is_authenticated %}
+                                <a type="button" class="btn btn-outline-primary btn-rounded me-md-2" href="{{ url_for('posts.post', id=post.id) }}" role="button">View Post</a>
+                            {% endif %}
                             <a type="button" class="btn btn-outline-success btn-rounded me-md-2" href="{{ url_for('posts.update', id=post.id) }}" role="button">Update</a>
                             <a type="button" class="btn btn-outline-danger btn-rounded" href="{{ url_for('posts.delete', id=post.id) }}" role="button">Delete</a>
                         </div>
