--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -2,15 +2,6 @@
 
 {% block content %}
 
-    {% for message in get_flashed_messages() %}
-
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-      {{ message }}
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-
-    {% endfor %}
-
     <script src="https://cdn.ckeditor.com/4.10.0/standard/ckeditor.js"></script>
 
     <style>
@@ -35,13 +26,13 @@
 			color: #AB171DFF;
 		}
 
-        .btn{
+        .btn2{
             background-color: #59886f;
             border-color: #59886f;
 
         }
 
-        .btn:hover{
+        .btn2:hover{
             background-color: #71887f;
             border-color: #71887f;
         }
@@ -74,11 +65,13 @@
                     </div>
                 </div>
                 <div>
-                    {{ form.submit(class="btn btn-primary d-grid gap-2 col-6 mx-auto") }}
+                    {{ form.submit(class="btn btn2 btn-primary d-grid gap-2 col-6 mx-auto") }}
                 </div>
             </form>
         {{ ckeditor.load() }}
         {{ ckeditor.config(name='body') }}
+        <br>
+        <a type="button" class="btn btn-outline-primary btn-rounded d-grid gap-2 col-6 mx-auto" href="{{ url_for('posts.posts') }}" role="button">Back to Posts</a>
         </div>
     </div>
 
