--- a/templates/challenge.html
+++ b/templates/challenge.html
@@ -29,6 +29,13 @@
 
     </style>
 
+    {% for message in get_flashed_messages() %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
+
     <div class="container">
         <h2 class="title is-1 header">{{ challenge.title }}</h2>
         <hr>
