--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
                                 <li><a class="dropdown-item" href="{{ url_for("donate.create") }}">New Donation</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for("challenges.create") }}">New Challenge</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for("posts.create") }}">New Post</a></li>
-                                <li><a class="dropdown-item" href="{{ url_for("maps.create") }}">New Event</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for("maps.create_event") }}">New Event</a></li>
 
 
                             {% endif %}
