Changed the type of editor used in the forms for creating and updating posts and challenges from 'standard' to 'basic'. Reorganised posts.html and challenges.html elements display as well as added missing code for flash messages. Redirected buttons in challenge.html and update_challenge.html to the correct HTML pages and functions as well as updated the buttons' placeholder names.

--- a/templates/create_challenge.html
+++ b/templates/create_challenge.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <script src="https://cdn.ckeditor.com/4.10.0/standard/ckeditor.js"></script>
+    <script src="https://cdn.ckeditor.com/4.10.0/basic/ckeditor.js"></script>
 
     <style>
 
