--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -53,6 +53,13 @@
 
     </style>
 
+    {% for message in get_flashed_messages() %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
+
     <div class="flex-container">
         <h1 class="title is-1 header">Challenges</h1>
         <div class="subtitle-description2">
@@ -65,24 +72,24 @@
         <h5 class="subtitle-description"><i>There are the little things that do count!</i></h5>
         {% for challenge in challenges %}
             <div class="card shadow mb-5">
-                <div class="card-body">
-                    <h5 class="card-subtitle mb-2 text-muted">{{ challenge.created.strftime("%d %B, %Y") }}</h5>
+                <div class="card-body text-start">
                     <h2 class="card-title">{{ challenge.title }}</h2>
+                    <h5 class="card-subtitle mb-2 text-muted">{{ challenge.created.strftime("%d %B, %Y") }}</h5>
                     <p class="card-text">{{ challenge.body | safe }}</p>
                     <br>
-                    {% if challenge.username == current_user.username %}
-                        <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic outlined example">
-                            <a type="button" class="btn btn-outline-primary btn-rounded me-md-2" href="{{ url_for('challenges.challenge', id=challenge.id) }}" role="button">View Post</a>
-                            <a type="button" class="btn btn-outline-success btn-rounded me-md-2" href="{{ url_for('challenges.update', id=challenge.id) }}" role="button">Update</a>
-                            <a type="button" class="btn btn-outline-danger btn-rounded" href="{{ url_for('challenges.delete', id=challenge.id) }}" role="button">Delete</a>
-                        </div>
-                    {% endif %}
-                    {% if current_user.role == 'user' %}
-                        <a type="button" class="btn btn-outline-primary btn-rounded d-grid gap-2 col-6 mx-auto" href="{{ url_for('challenges.challenge', id=challenge.id) }}" role="button">View Post</a>
-                        <br>
-                        <a type="button" class="btn btn-outline-success btn-rounded d-grid gap-2 col-6 mx-auto" href="{{ url_for('challenges.join', id=challenge.id) }}" role="button">Join Challenge</a>
-                    {% endif %}
                 </div>
+                {% if challenge.username == current_user.username %}
+                    <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic outlined example">
+                        <a type="button" class="btn btn-outline-primary btn-rounded me-md-2" href="{{ url_for('challenges.challenge', id=challenge.id) }}" role="button">View Challenge</a>
+                        <a type="button" class="btn btn-outline-success btn-rounded me-md-2" href="{{ url_for('challenges.update', id=challenge.id) }}" role="button">Update</a>
+                        <a type="button" class="btn btn-outline-danger btn-rounded" href="{{ url_for('challenges.delete', id=challenge.id) }}" role="button">Delete</a>
+                    </div>
+                {% endif %}
+                {% if current_user.role == 'user' %}
+                    <a type="button" class="btn btn-outline-primary btn-rounded d-grid gap-2 col-6 mx-auto" href="{{ url_for('challenges.challenge', id=challenge.id) }}" role="button">View Challenge</a>
+                    <br>
+                    <a type="button" class="btn btn-outline-success btn-rounded d-grid gap-2 col-6 mx-auto" href="{{ url_for('challenges.join', id=challenge.id) }}" role="button">Join Challenge</a>
+                {% endif %}
             </div>
         {% endfor %}
     </div>
