--- a/templates/posts.html
+++ b/templates/posts.html
@@ -44,6 +44,13 @@
 
     </style>
 
+    {% for message in get_flashed_messages() %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {% endfor %}
+
     <div class="container">
         <h1 class="title is-1 header">Posts</h1>
         <div class="subtitle-description2">
@@ -59,20 +66,20 @@
         </div>
         {% for post in posts %}
             <div class="card shadow mb-5">
-                <div class="card-body">
-                    <h5 class="card-subtitle mb-2 text-muted">{{ post.created.strftime("%d %B, %Y") }}</h5>
+                <div class="card-body text-start">
                     <h2 class="card-title">{{ post.title }}</h2>
+                    <h5 class="card-subtitle mb-2 text-muted">{{ post.created.strftime("%d %B, %Y") }}</h5>
                     <p class="text-start">{{ post.body | safe }}</p>
-                    {% if post.username == current_user.username %}
-                        <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic outlined example">
-                            {% if current_user.is_authenticated %}
-                                <a type="button" class="btn btn-outline-primary btn-rounded me-md-2" href="{{ url_for('posts.post', id=post.id) }}" role="button">View Post</a>
-                            {% endif %}
-                            <a type="button" class="btn btn-outline-success btn-rounded me-md-2" href="{{ url_for('posts.update', id=post.id) }}" role="button">Update</a>
-                            <a type="button" class="btn btn-outline-danger btn-rounded" href="{{ url_for('posts.delete', id=post.id) }}" role="button">Delete</a>
-                        </div>
-                    {% endif %}
                 </div>
+                {% if post.username == current_user.username %}
+                    <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic outlined example">
+                        {% if current_user.is_authenticated %}
+                            <a type="button" class="btn btn-outline-primary btn-rounded me-md-2" href="{{ url_for('posts.post', id=post.id) }}" role="button">View Post</a>
+                        {% endif %}
+                        <a type="button" class="btn btn-outline-success btn-rounded me-md-2" href="{{ url_for('posts.update', id=post.id) }}" role="button">Update</a>
+                        <a type="button" class="btn btn-outline-danger btn-rounded" href="{{ url_for('posts.delete', id=post.id) }}" role="button">Delete</a>
+                    </div>
+                {% endif %}
             </div>
         {% endfor %}
     </div>
