--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <script src="https://cdn.ckeditor.com/4.10.0/standard/ckeditor.js"></script>
+    <script src="https://cdn.ckeditor.com/4.10.0/basic/ckeditor.js"></script>
 
     <style>
 
