--- a/templates/challenge.html
+++ b/templates/challenge.html
@@ -56,7 +56,7 @@
             {% if not user_in_challenge %}
                 <a type="button" class="btn btn-outline-success btn-rounded d-grid gap-2 col-6 mx-auto" href="{{ url_for('challenges.join', id=challenge.id) }}" role="button">Join Challenge</a>
             {% else %}
-                <a type="button" class="btn btn-outline-success btn-rounded d-grid gap-2 col-6 mx-auto" href="{{ url_for('challenges.leave', id=challenge.id) }}" role="button">Leave Challenge</a>
+                <a type="button" class="btn btn-outline-success btn-rounded d-grid gap-2 col-6 mx-auto" href="{{ url_for('challenges.leave', id=challenge.id) }}" role="button">Unjoin Challenge</a>
             {% endif %}
             <br>
             <a type="button" class="btn btn-outline-primary btn-rounded d-grid gap-2 col-6 mx-auto" href="{{ url_for('challenges.challenges') }}" role="button">Back to Challenges</a>
