Added to create_post.html the feature of uploading an image as well as updated the PostForm to include a file field to store given image and added a new row to the 'Post' table in the database. Updated post.html and posts.html in order to display the image along with the post. Edited 'post1' in models.py and included an image to render with the content. TODO: fix Attribute Error

--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -68,6 +68,16 @@
                     </div>
                 </div>
                 <br>
+                <div class="field">
+                    <div class="control">
+                        <p>Upload an image below to be displayed with the post</p>
+                        {{ form.image(class="form-control-field") }}
+                        {% for error in form.image.errors %}
+                            {{ error }}
+                        {% endfor %}
+                    </div>
+                </div>
+                <br>
                 <div>
                     {{ form.submit(class="btn btn-primary d-grid gap-2 col-6 mx-auto") }}
                 </div>
