--- a/templates/posts.html
+++ b/templates/posts.html
@@ -71,8 +71,10 @@
                     <h5 class="card-subtitle mb-2 text-muted">{{ post.created.strftime("%d %B, %Y") }}</h5>
                     <p class="text-start">{{ post.body | safe }}</p>
                 </div>
+                <img class="card-img-bottom w-75 p-3 rounded mx-auto d-block" src="data:image/jpg;base64,{{ post.image }}" alt="post_img"  id="imgslot"/>
                 {% if post.username == current_user.username %}
                     <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic outlined example">
+                        <br>
                         {% if current_user.is_authenticated %}
                             <a type="button" class="btn btn-outline-primary btn-rounded me-md-2" href="{{ url_for('posts.post', id=post.id) }}" role="button">View Post</a>
                         {% endif %}
