--- a/templates/maps.html
+++ b/templates/maps.html
@@ -18,7 +18,9 @@
 {% block content %}
 
     <div id="event-map"></div>
-    <div id="event-list"></div>
+    <div id="event-list">
+        <h2 class="event-list-head">Your events!</h2>
+    </div>
 
     {# Geolocation error toast #}
     <div id="geo-error-toast" class="toast-container position-absolute p-3 top-0 start-50 translate-middle-x">
