--- a/static/base.css
+++ b/static/base.css
@@ -257,14 +257,14 @@ form div.field {
 }
 /* turbine video on donate */
 .donate-content {
-    width: 80vw;
-    height: 80vh;
-    position: relative;
+    width: 76.5vw;
+    height: 77vh;
+    position: center;
     right: calc(-0vw + 0%);
 }
 
 .donate-content .text {
-    color: #000000;
+    color: #558846;
 }
 
 .donate-content .text h1 {
