--- a/templates/donate.html
+++ b/templates/donate.html
@@ -65,6 +65,7 @@
                                                 <h6 class="card-subtitle mb-2 text-muted">{{ donation.created.strftime('%d-%m-%Y') }}</h6>
                                                 <p class="card-text">{{ donation.reason }}</p>
                                                 <p class="card-text">{{ donation.status }}</p>
+
                                                 <form action="{{ url_for('donate.create_session', id=donation.id) }} " method="post">
                                                     <p> Please make your contribution below and help reach the goal indicated. </p>
                                                     <div class="input-group mb-3">
@@ -73,6 +74,15 @@
                                                         <span class="input-group-text">.00</span>
                                                     </div>
                                                     <input class="btn btn-primary" type="submit" value="Donate"/>
+                                                    {% if donation.username == current_user.username %}
+                                                        <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic outlined example">
+                                                            <br>
+                                                            {% if current_user.role == 'admin' %}
+                                                            <a type="button" class="btn btn-outline-success btn-rounded me-md-2" href="{{ url_for('donate.update', id=donation.id) }}" role="button">Update</a>
+                                                            <a type="button" class="btn btn-outline-danger btn-rounded" href="{{ url_for('donate.delete', id=donation.id) }}" role="button">Delete</a>
+                                                            {% endif %}
+                                                        </div>
+                                                    {% endif %}
                                                 </form>
                                             </div>
                                         </div>
