Begin adding in the ability to update and delete events that you have created.

--- a/templates/maps.html
+++ b/templates/maps.html
@@ -19,7 +19,7 @@
 
     <div id="event-map"></div>
     <div id="event-list">
-        <h2 class="event-list-head">Your events!</h2>
+        <h2 class="event-list-head">Your events</h2>
     </div>
 
     {# Geolocation error toast #}
