--- a/templates/maps.html
+++ b/templates/maps.html
@@ -23,14 +23,25 @@
     </div>
 
     {# Geolocation error toast #}
-    <div id="geo-error-toast" class="toast-container position-absolute p-3 top-0 start-50 translate-middle-x">
-        <div class="toast">
+    <div class="toast-container position-absolute p-3 top-0 start-50 translate-middle-x">
+        <div id="geo-toast" class="toast">
             <div class="toast-header text-danger">
                 <i class="fas fa-exclamation-triangle"></i>
                 <strong class="me-auto">Geolocation error</strong>
             </div>
             <div id="geo-toast-body" class="toast-body"></div>
         </div>
+
+        <div id="deletion-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div id="deletion-toast" class="toast-header text-danger">
+                <i class="fas fa-exclamation-triangle"></i>
+                <strong class="me-auto">Warning!</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="close"></button>
+            </div>
+
+            <div id="deletion-toast-body" class="toast-body"></div>
+        </div>
+
     </div>
 
 {% endblock %}
