Add missing social media links

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,8 +80,8 @@
             <div class="col services-explain section-description">
                 <div class="sm-buttons">
                     <a href="https://twitter.com/Greenify101" class="fab fa-twitter-square"></a>
-                    <a href="#" class="fab fa-instagram-square"></a>
-                    <a href="#" class="fab fa-facebook-square"></a>
+                    <a href="https://www.instagram.com/greenify.101/" class="fab fa-instagram-square"></a>
+                    <a href="https://www.facebook.com/Greenify-108819265010592" class="fab fa-facebook-square"></a>
                 </div>
             </div>
         </div>
