--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -48,7 +48,7 @@
         <br>
         <br>
         <div class="box">
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 <div class="field">
                     {{ form.csrf_token() }}
                     <div class="control">
@@ -71,10 +71,8 @@
                 <div class="field">
                     <div class="control">
                         <p>Upload an image below to be displayed with the post</p>
-                        {{ form.image(class="form-control-field") }}
-                        {% for error in form.image.errors %}
-                            {{ error }}
-                        {% endfor %}
+                        <label for="inputFile">File input</label>
+                        <input class="form-control-file" type="file" name="inputFile">
                     </div>
                 </div>
                 <br>
