--- a/templates/challenge.html
+++ b/templates/challenge.html
@@ -44,6 +44,7 @@
             <div class="card-body text-start">
                 <p class="text-start">{{ challenge.body | safe }}</p>
             </div>
+            <img class="card-img-bottom w-75 p-3 rounded mx-auto d-block" src="data:image/jpg;base64,{{ challenge.image }}" alt="post_img"  id="imgslot"/>
         </div>
         {% if challenge.email == current_user.email %}
             <div class="d-grid gap-2 d-md-block" role="group" aria-label="Basic outlined example">
