--- a/templates/post.html
+++ b/templates/post.html
@@ -42,7 +42,7 @@
         <h5 class="card-subtitle mb-2 text-muted text-center">{{ post.created.strftime("%d %B, %Y") }}</h5>
         <div class="card mb-5">
             <div class="card-body text-start">
-                <p class="text-start">{{ post.body | safe }}</p>
+                <p class="text-start">{{ post.body}}</p>
             </div>
             <img class="card-img-bottom w-75 p-3 rounded mx-auto d-block" src="data:image/jpg;base64,{{ post.image }}" alt="post_img"  id="imgslot"/>
         </div>
