--- a/static/base.css
+++ b/static/base.css
@@ -284,8 +284,27 @@ form div.field {
     margin-top: 10px;
 
 }
+/* admin page */
 
+.admin-title {
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
 
+.section-title {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.subtitle {
+    margin-top: 25px;
+    margin-bottom: 70px;
+}
+
+.admin {
+    margin-top: 40px;
+    text-align: center;
+}
 
 
 
