--- a/static/events.css
+++ b/static/events.css
@@ -16,6 +16,7 @@
 .event-list-head {
     font-weight: bolder;
     text-transform: uppercase;
+    font-size: 2rem;
 }
 
 /* Set the width and height to be correctly shown */
@@ -31,7 +32,7 @@
 }
 
 /* Format info-windows */
-h5.card-title {
+.card-title {
     font-weight: bold;
     text-transform: uppercase;
 }
