Add favicon of the logo to the website.

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
         {# Import styles #}
         <script src="/static/base.js"></script>
         <link href="/static/base.css" rel="stylesheet">
+
+        {# Import Favicon #}
+        <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
     {% endblock %}
 </head>
 
