--- a/templates/donate.html
+++ b/templates/donate.html
@@ -1,14 +1,65 @@
 {% extends "base.html" %}
 
 {% block content %}<style>
-    /* Add a card effect for articles */.card {
-    background-color: white;
-    margin: 20px;
-    padding: 20px;
-  }.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-}
+    /* Add a card effect for articles */
+    .card {
+        background-color: white;
+        margin: 20px;
+        padding: 20px;
+    }
+
+    .flex-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    /* turbine video on donate */
+    .donate-content {
+        width: 76.5vw;
+        height: 77vh;
+        position: center;
+        right: calc(-0vw + 0%);
+    }
+
+    .donate-content .text {
+        color: #558846;
+    }
+
+    .donate-content .text h1 {
+        margin-top: 1px;
+        color: white;
+        text-shadow: 1px 1px 0 rgba(0,0,0,0.4);
+        padding-top:1px;
+        font-size: 70px;
+        font-weight: 700;
+        text-align: center;
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+
+    /* turbine video text */
+    .donate-content .description {
+        font-size:30px;
+        font-style: italic;
+        margin-top: 10px;
+
+    }
+
+    /* donate page */
+    .donate-how\? {
+        font-size: 20px;
+        margin-top: 30px;
+        color: rgba(83, 145, 88, 0.82)
+    }
+
+    .donate-steps{
+        margin-top: 35px;
+    }
+
+    .donate-explanation {
+        margin-top: 30px;
+        margin-bottom: 50px;
+    }
+
     /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other
   instead of next to each other */
     @media screen and (max-width: 800px) {
